kubernetes/k8s.back.deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: localchat-back
spec:
  serviceName: "back"
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ghcr.io/aitorru/localchat-back:9669284234
        ports:
        - containerPort: 3001
