kubernetes/k8s.front.deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: localchat-front
spec:
  serviceName: "front"
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: ghcr.io/aitorru/localchat-front:9669062729
        ports:
        - containerPort: 3001
