kubernetes/k8s.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sonic.tail0edab.ts.net
    http:
      paths:
      - path: /localchat
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
      - path: /localchat/ws
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 3001
  - host: sonic.local
    http:
      paths:
      - path: /localchat
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
      - path: /localchat/ws
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 3001
